--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -28,8 +28,9 @@
     Hold list : [11,12,10,120,...]
 </div>
 
+<!-- {{roomList | json}} -->
 <div>
-    <table>
+    <table class="table">
         <tr>
             <th>Index</th>
             <th>Even/Odd</th>
@@ -39,18 +40,20 @@
             <th>Amenities</th>
             <th>Checkin</th>
             <th>Checkout</th>
+            <th>Rating</th>
         </tr>
         <tr 
         [ngClass]="e ? 'even':'odd'"
-        *ngFor="let room of roomList; let o = odd; let e = even; let i = index">
-            <td>{{i}}</td>  
+        *ngFor="let room of roomList | slice: 0:3; let o = odd; let e = even; let i = index">
+            <td>{{i | percent}}</td>  
             <td>{{o ? 'Even' : 'Odd'}}</td>
             <td>{{room.roomNumber}}</td>
-            <td>{{room.roomType}}</td>
-            <td>{{room.price}}</td>
-            <td>{{room.ammenities}}</td>
-            <td>{{room.checkinTime}}</td>
-            <td>{{room.checkoutTime}}</td>
+            <td>{{room.roomType | uppercase}}</td>
+            <td>{{room.price | currency : 'INR'}}</td>
+            <td>{{room.ammenities | titlecase}}</td>
+            <td>{{room.checkinTime }}</td>
+            <td>{{room.checkoutTime | date : 'short'}}</td>
+            <td>{{room.rating | number : '1.1-3' : 'en-us'}}</td>
         </tr>
     </table>
 </div>
