--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -57,5 +57,29 @@
         </tr>
     </table>
 </div> -->
-
-<app-rooms-list [rooms]="roomList"></app-rooms-list>
+<div *ngIf="selectedRoom">
+    <h3>Selected Room Details</h3>
+    <div>
+        <table class="table">
+            <tr>
+                <th>Room Number</th>
+                <th>Room Type</th>
+                <th>price</th>
+                <th>Amenities</th>
+                <th>Checkin</th>
+                <th>Checkout</th>
+                <th>Rating</th>
+            </tr>
+            <tr>
+                <td>{{selectedRoom.roomNumber}}</td>
+                <td>{{selectedRoom.roomType | uppercase}}</td>
+                <td>{{selectedRoom.price | currency : 'INR'}}</td>
+                <td>{{selectedRoom.ammenities | titlecase}}</td>
+                <td>{{selectedRoom.checkinTime }}</td>
+                <td>{{selectedRoom.checkoutTime | date : 'short'}}</td>
+                <td>{{selectedRoom.rating | number : '1.1-3' : 'en-us'}}</td>
+            </tr>
+        </table>
+    </div>
+</div>
+<app-rooms-list [rooms]="roomList" (selectedRoom)="selectRoom($event)"></app-rooms-list>
