--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <!-- <h1>Hello World from Harshali ! </h1> -->
 
 <!-- say we have to dynamically render this component -->
-<!-- <app-rooms></app-rooms> -->
+<app-rooms></app-rooms>
 
 <!-- demonstrate ngswitch -->
 <!-- <div [ngSwitch]="role">
@@ -13,8 +13,8 @@
     <div *ngSwitchDefault>Invalid Role, Unauthorizzed</div>
 </div> -->
 
-<div>
+<!-- <div>
     <ng-template #user></ng-template>
 </div>
 
-<div #name></div>
+<div #name></div> -->
