--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -1,6 +1,10 @@
 <!-- binding syntax 1- interpolation , uses {{}} to access the variable-->
 <h1>Welcome to {{hotelName}}</h1>
 <app-header></app-header>
+<app-header></app-header>
+<app-header></app-header>
+
+
 <p>Located in Heart of Downtown LA!</p>
 
 <!-- binding syntax2- property binding, uses [propertyName] to access the variable -->
