--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,12 @@
 <!-- <h1>Hello World from Harshali ! </h1> -->
 
 <!-- say we have to dynamically render this component -->
-<app-rooms></app-rooms>
+<!-- <app-rooms></app-rooms> -->
+<app-container>
+    <app-rooms></app-rooms>
+    <app-employee></app-employee>
+    <h2>Hello from ng-content</h2>
+</app-container>
 
 <!-- demonstrate ngswitch -->
 <!-- <div [ngSwitch]="role">
