Http and Observable

--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -85,7 +85,7 @@
                 <td>{{selectedRoom.roomNumber}}</td>
                 <td>{{selectedRoom.roomType | uppercase}}</td>
                 <td>{{selectedRoom.price | currency : 'INR'}}</td>
-                <td>{{selectedRoom.ammenities | titlecase}}</td>
+                <td>{{selectedRoom.amenities | titlecase}}</td>
                 <td>{{selectedRoom.checkinTime }}</td>
                 <td>{{selectedRoom.checkoutTime | date : 'short'}}</td>
                 <td>{{selectedRoom.rating | number : '1.1-3' : 'en-us'}}</td>
