--- a/src/app/rooms/rooms-list/rooms-list.component.html
+++ b/src/app/rooms/rooms-list/rooms-list.component.html
@@ -22,7 +22,7 @@
             <td>{{room.roomNumber}}</td>
             <td>{{room.roomType | uppercase}}</td>
             <td>{{room.price | currency : 'INR'}}</td>
-            <td>{{room.ammenities | titlecase}}</td>
+            <td>{{room.amenities | titlecase}}</td>
             <td>{{room.checkinTime }}</td>
             <td>{{room.checkoutTime | date : 'short'}}</td>
             <td>{{room.rating | number : '1.1-3' : 'en-us'}}</td>
