--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
 <!-- <app-rooms></app-rooms> -->
 <app-container>
     <app-rooms></app-rooms>
-    <!-- <app-employee></app-employee> -->
-    <!-- <h2>Hello from ng-content</h2> -->
+    <app-employee></app-employee> 
+    <h2>Hello from ng-content</h2>
 </app-container>
 
 <!-- demonstrate ngswitch -->
