Changing UI , Adding nav bar with Angular Material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
 <!-- <a [href]="'rooms'">Rooms</a>&nbsp;
 <a [href]="'employees'">Employees</a> -->
 
-<a [routerLink]="'rooms'">Rooms</a>&nbsp;
-<a [routerLink]="'employees'">Employees</a>
-
+<!-- <a [routerLink]="'rooms'">Rooms</a>&nbsp;
+<a [routerLink]="'employees'">Employees</a> -->
+<app-app-navigation></app-app-navigation>
 <router-outlet></router-outlet>
