--- a/src/app/rooms/rooms-list/rooms-list.component.html
+++ b/src/app/rooms/rooms-list/rooms-list.component.html
@@ -26,8 +26,11 @@
             <td>{{room.checkinTime }}</td>
             <td>{{room.checkoutTime | date : 'short'}}</td>
             <td>{{room.rating | number : '1.1-3' : 'en-us'}}</td>
-            <td>
+            <!-- <td>
                 <button class="btn btn-primary" (click)="selectRoom(room)">Select</button>
+            </td> -->
+            <td>
+                <button class="btn btn-primary" [routerLink]="['/rooms', room.roomNumber]">Book Room</button>
             </td>
         </tr>
     </table>
