forms, validation, prsitine, dirty, reset form

--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -1,8 +1,8 @@
 <!-- binding syntax 1- interpolation , uses {{}} to access the variable-->
 <h1>Welcome to {{hotelName}}</h1>
-<div>
+<!-- <div>
     <button (click)="addRoom()">Add Room</button>
-</div>
+</div> -->
 
 <!-- <app-header></app-header>
 <app-header></app-header>
@@ -95,7 +95,7 @@
                 <th>Amenities</th>
                 <th>Checkin</th>
                 <th>Checkout</th>
-                <th>Rating</th>
+                <th>Rating</th>a
             </tr>
             <tr>
                 <td>{{selectedRoom.roomNumber}}</td>
