writing your own Custom validator

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,10 @@
 <form>
     <div class="formGroup">
         <!-- <input color="steelblue" appHover type="email" name="name" [(ngModel)]="email" placeholder="Username"> -->
-        <input appHover="steelblue" type="email" name="name" [(ngModel)]="email" placeholder="Username">
-
+        <input #emailcontrol="ngModel" appEmailvalidator appHover="steelblue" type="email" name="name" [(ngModel)]="email" placeholder="Username">
+        <div>
+             {{emailcontrol.errors | json}}
+        </div>
     </div>
     <div class="formGroup">
         <input appHover="lightgreen" type="password" name="password"  [(ngModel)]="password" placeholder="Password">
