--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -1,1 +1,7 @@
 <p>booking works!</p>
+{{bookingForm.value | json}}
+{{bookingForm.pristine | json}}
+
+<form [formGroup]="bookingForm">
+    
+</form>
