--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -118,7 +118,56 @@ guestCount: ['']   -->
         formControlName="" 
         placeholder="">
   </mat-form-field> -->
+  <div formGroupName="address">
+    <mat-accordion class="example-headers-align" multi>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Address
+            </mat-panel-title>
 
+          </mat-expansion-panel-header>
+      
+          <mat-form-field appearance="fill">
+            <mat-label>Address Line 1</mat-label>
+            <input type="text" matInput 
+                formControlName="addressLine1" 
+                placeholder="Address Line 1">
+          </mat-form-field>
+          <mat-form-field appearance="fill">
+            <mat-label>Address Line 2</mat-label>
+            <input type="text" matInput 
+            formControlName="addressLine2" 
+            placeholder="Address Line 2">          
+        </mat-form-field>
+          <mat-form-field appearance="fill">
+            <mat-label>City</mat-label>
+            <input type="text" matInput 
+                formControlName="City" 
+                placeholder="City">
+          </mat-form-field>
+          <mat-form-field appearance="fill">
+            <mat-label>State</mat-label>
+            <input type="text" matInput 
+                formControlName="State" 
+                placeholder="State">
+          </mat-form-field>
+          <mat-form-field appearance="fill">
+            <mat-label>Country</mat-label>
+            <input type="text" matInput 
+                formControlName="Country" 
+                placeholder="Country">
+          </mat-form-field>
+          <mat-form-field appearance="fill">
+            <mat-label>Zipcode</mat-label>
+            <input type="number" matInput 
+                formControlName="ZipCode" 
+                placeholder="ZipCode">
+          </mat-form-field>
+      
+        </mat-expansion-panel>
+    </mat-accordion>
+  </div>
   <div>
     <button mat-raised-button color="primary">Book Room</button>
   </div>
