--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -2,173 +2,129 @@
 {{bookingForm.value | json}}
 {{bookingForm.pristine | json}}
 
-<!-- roomId: [''], //[''] is a shortcut to new FormControl('')
-guestEmail: [''],
-checkinDate: [''],
-checkoutDate: [''],
-bookingstatus: [''],
-bookingAmount: [''],
-bookingDate:[''],
-mobileNumber: [''],
-guestName: [''],
-guestAddress: [''],
-guestCity: [''],
-guestState: [''],
-guestCountry: [''],
-guestZipCode: [''],
-guestCount: ['']   -->
-
 <form class="example-form" [formGroup]="bookingForm" (ngSubmit)="Booking()">
     <mat-form-field class="example-full-width">
-    <mat-label>Room Id</mat-label>
-    <input type="text" matInput 
-        formControlName="roomId" 
-        placeholder="Room id">
-    <!-- <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+        <mat-label>Room Id</mat-label>
+        <input type="text" matInput formControlName="roomId" placeholder="Room id">
+        <!-- <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
       Please enter a valid email address
     </mat-error>
     <mat-error *ngIf="emailFormControl.hasError('required')">
       Email is <strong>required</strong>
     </mat-error> -->
-  </mat-form-field>
-  <mat-form-field class="example-full-width">
-    <mat-label>Name</mat-label>
-    <input type="text" matInput 
-        formControlName="guestName" 
-        placeholder="Enter Guest Name">
-  </mat-form-field>
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Name</mat-label>
+        <input type="text" matInput formControlName="guestName" placeholder="Enter Guest Name">
+    </mat-form-field>
 
-  <mat-form-field class="example-full-width">
-    <mat-label>Email</mat-label>
-    <input type="email" matInput 
-        formControlName="guestEmail" 
-        placeholder="Enter email">
-  </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Email</mat-label>
+        <input type="email" matInput formControlName="guestEmail" placeholder="Enter email">
+    </mat-form-field>
 
-  <mat-form-field class="example-full-width">
-    <mat-label>Contact Number</mat-label>
-    <input type="number" matInput 
-        formControlName="mobileNumber" 
-        placeholder="Enter your mobile number">
-  </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Contact Number</mat-label>
+        <input type="number" matInput formControlName="mobileNumber" placeholder="Enter your mobile number">
+    </mat-form-field>
 
-  <mat-form-field class="example-full-width">
-    <mat-label>Booking Amount</mat-label>
-    <input type="number" matInput 
-        formControlName="bookingAmount" 
-        placeholder="Amount">
-  </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Booking Amount</mat-label>
+        <input type="number" matInput formControlName="bookingAmount" placeholder="Amount">
+    </mat-form-field>
 
-  <mat-form-field class="example-full-width">
-    <mat-label>Check-in Date</mat-label>
-    <input matInput [matDatepicker]="picker1" formControlName="checkinDate">
-    <mat-hint>MM/DD/YYYY</mat-hint>
-    <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
-    <mat-datepicker #picker1></mat-datepicker>
-  </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Check-in Date</mat-label>
+        <input matInput [matDatepicker]="picker1" formControlName="checkinDate">
+        <mat-hint>MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
+        <mat-datepicker #picker1></mat-datepicker>
+    </mat-form-field>
 
-  <mat-form-field class="example-full-width">
-    <mat-label>Check-out Date</mat-label>
-    <input matInput [matDatepicker]="picker2" formControlName="checkoutDate">
-    <mat-hint>MM/DD/YYYY</mat-hint>
-    <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
-    <mat-datepicker #picker2></mat-datepicker>
-  </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Check-out Date</mat-label>
+        <input matInput [matDatepicker]="picker2" formControlName="checkoutDate">
+        <mat-hint>MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
+        <mat-datepicker #picker2></mat-datepicker>
+    </mat-form-field>
 
-  <mat-form-field class="example-full-width">
-    <mat-label>Booking Date</mat-label>
-    <input matInput [matDatepicker]="picker3" formControlName="bookingDate">
-    <mat-hint>MM/DD/YYYY</mat-hint>
-    <mat-datepicker-toggle matIconSuffix [for]="picker3"></mat-datepicker-toggle>
-    <mat-datepicker #picker3></mat-datepicker>
-  </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <mat-label>Booking Date</mat-label>
+        <input matInput [matDatepicker]="picker3" formControlName="bookingDate">
+        <mat-hint>MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matIconSuffix [for]="picker3"></mat-datepicker-toggle>
+        <mat-datepicker #picker3></mat-datepicker>
+    </mat-form-field>
 
-<!--
-  <mat-form-field class="example-full-width">
-    <mat-label></mat-label>
-    <input type="text" matInput 
-        formControlName="" 
-        placeholder="">
-  </mat-form-field>
+    <div formGroupName="address">
+        <mat-accordion class="example-headers-align" multi>
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        Address
+                    </mat-panel-title>
 
-  <mat-form-field class="example-full-width">
-    <mat-label></mat-label>
-    <input type="text" matInput 
-        formControlName="" 
-        placeholder="">
-  </mat-form-field>
+                </mat-expansion-panel-header>
 
-  <mat-form-field class="example-full-width">
-    <mat-label></mat-label>
-    <input type="text" matInput 
-        formControlName="" 
-        placeholder="">
-  </mat-form-field>
+                <mat-form-field appearance="fill">
+                    <mat-label>Address Line 1</mat-label>
+                    <input type="text" matInput formControlName="addressLine1" placeholder="Address Line 1">
+                </mat-form-field>
+                <mat-form-field appearance="fill">
+                    <mat-label>Address Line 2</mat-label>
+                    <input type="text" matInput formControlName="addressLine2" placeholder="Address Line 2">
+                </mat-form-field>
+                <mat-form-field appearance="fill">
+                    <mat-label>City</mat-label>
+                    <input type="text" matInput formControlName="City" placeholder="City">
+                </mat-form-field>
+                <mat-form-field appearance="fill">
+                    <mat-label>State</mat-label>
+                    <input type="text" matInput formControlName="State" placeholder="State">
+                </mat-form-field>
+                <mat-form-field appearance="fill">
+                    <mat-label>Country</mat-label>
+                    <input type="text" matInput formControlName="Country" placeholder="Country">
+                </mat-form-field>
+                <mat-form-field appearance="fill">
+                    <mat-label>Zipcode</mat-label>
+                    <input type="number" matInput formControlName="ZipCode" placeholder="ZipCode">
+                </mat-form-field>
 
-  <mat-form-field class="example-full-width">
-    <mat-label></mat-label>
-    <input type="text" matInput 
-        formControlName="" 
-        placeholder="">
-  </mat-form-field>
+            </mat-expansion-panel>
+        </mat-accordion>
+    </div>
 
-  <mat-form-field class="example-full-width">
-    <mat-label></mat-label>
-    <input type="text" matInput 
-        formControlName="" 
-        placeholder="">
-  </mat-form-field> -->
-  <div formGroupName="address">
-    <mat-accordion class="example-headers-align" multi>
-        <mat-expansion-panel>
-          <mat-expansion-panel-header>
-            <mat-panel-title>
-              Address
-            </mat-panel-title>
+    <div>
+        <button mat-raised-button color="primary" type="button" (click)="AddGuest()">Add Guest</button>
+    </div>
 
-          </mat-expansion-panel-header>
-      
-          <mat-form-field appearance="fill">
-            <mat-label>Address Line 1</mat-label>
-            <input type="text" matInput 
-                formControlName="addressLine1" 
-                placeholder="Address Line 1">
-          </mat-form-field>
-          <mat-form-field appearance="fill">
-            <mat-label>Address Line 2</mat-label>
-            <input type="text" matInput 
-            formControlName="addressLine2" 
-            placeholder="Address Line 2">          
-        </mat-form-field>
-          <mat-form-field appearance="fill">
-            <mat-label>City</mat-label>
-            <input type="text" matInput 
-                formControlName="City" 
-                placeholder="City">
-          </mat-form-field>
-          <mat-form-field appearance="fill">
-            <mat-label>State</mat-label>
-            <input type="text" matInput 
-                formControlName="State" 
-                placeholder="State">
-          </mat-form-field>
-          <mat-form-field appearance="fill">
-            <mat-label>Country</mat-label>
-            <input type="text" matInput 
-                formControlName="Country" 
-                placeholder="Country">
-          </mat-form-field>
-          <mat-form-field appearance="fill">
-            <mat-label>Zipcode</mat-label>
-            <input type="number" matInput 
-                formControlName="ZipCode" 
-                placeholder="ZipCode">
-          </mat-form-field>
-      
-        </mat-expansion-panel>
-    </mat-accordion>
-  </div>
-  <div>
-    <button mat-raised-button color="primary">Book Room</button>
-  </div>
+    <div formArrayName="guests">
+        <mat-accordion class="example-headers-align" multi>
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        Guests
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+                    <div *ngFor="let guest of guests.controls; let i=index">
+                        <div [formGroupName]="i">
+                            <mat-form-field appearance="fill">
+                                <mat-label>Guest Name</mat-label>
+                                <input type="text" matInput formControlName="guestName" placeholder="Guest Name" />
+                            </mat-form-field>
+                            <mat-form-field appearance="fill">
+                                <mat-label>Age</mat-label>
+                                <input type="number" matInput formControlName="age" placeholder="Age" />
+                            </mat-form-field>
+                        </div>
+                    </div>
+            </mat-expansion-panel>
+        </mat-accordion>
+    </div>
+
+    <div>
+        <button mat-raised-button color="primary">Book Room</button>
+    </div>
 </form>
