--- a/src/app/booking/booking.component.scss
+++ b/src/app/booking/booking.component.scss
@@ -4,6 +4,15 @@
     width: 100%;
   }
   
-  .example-full-width {
+.example-full-width {
     width: 100%;
-  }
+}
+
+.example-headers-align .mat-expansion-panel-header-description {
+  justify-content: space-between;
+  align-items: center;
+}
+
+.example-headers-align .mat-mdc-form-field + .mat-mdc-form-field {
+  margin-left: 8px;
+}
