dynamically remove guests using remove control

--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -139,7 +139,11 @@
                                 <input type="number" matInput formControlName="age" placeholder="Age" />
                             </mat-form-field>
                         </div>
+                        <div>
+                            <button mat-raised-button color="primary" type="button" (click)="removeGuest(i)">Remove Guest</button>
+                        </div>
                     </div>
+                    
             </mat-expansion-panel>
         </mat-accordion>
     </div>
