--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -149,7 +149,12 @@
     </div>
 
     <br>
+
     <div>
-        <button mat-raised-button color="primary">Book Room</button>
+        <mat-checkbox class="example-margin" formControlName="TnC">*Terms and conditions*</mat-checkbox>
+
+    </div>
+    <div>
+        <button [disabled]="bookingForm.invalid" mat-raised-button color="primary">Book Room</button>
     </div>
 </form>
