RxJs map- mergemap, switchmap, exhaust map

--- a/src/app/rooms/rooms-add/rooms-add.component.html
+++ b/src/app/rooms/rooms-add/rooms-add.component.html
@@ -21,7 +21,8 @@
 <form #roomsForm="ngForm" (ngSubmit)="AddRoom(roomsForm)">
     <div class="formGroup">
         <input required class="form-control" type="text" name="roomType"  placeholder="RoomType"
-        [(ngModel)]="room.roomType"/>
+        [(ngModel)]="room.roomType"
+        [ngModelOptions]="{updateOn:'blur'}"/>
     </div>
     <div class="formGroup">
         <input #roomamenities="ngModel" 
