--- a/src/app/rooms/rooms-list/rooms-list.component.html
+++ b/src/app/rooms/rooms-list/rooms-list.component.html
@@ -30,7 +30,7 @@
                 <button class="btn btn-primary" (click)="selectRoom(room)">Select</button>
             </td> -->
             <td>
-                <button class="btn btn-primary" [routerLink]="['/rooms', room.roomNumber]">Book Room</button>
+                <button class="btn btn-primary" [routerLink]="['/booking', room.roomNumber]">Book Room</button>
             </td>
         </tr>
     </table>
