custom pipe filter(dont use not recommended)

--- a/src/app/rooms/rooms-list/rooms-list.component.html
+++ b/src/app/rooms/rooms-list/rooms-list.component.html
@@ -16,7 +16,8 @@
         </tr>
         <tr 
         [ngClass]="e ? 'even':'odd'"
-        *ngFor="let room of rooms let o = odd; let e = even; let i = index">
+        *ngFor="let room of rooms; let o = odd; let e = even; let i = index">
+
             <td>{{i | percent}}</td>  
             <td>{{o ? 'Even' : 'Odd'}}</td>
             <td>{{room.roomNumber}}</td>
