--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -29,7 +29,11 @@
 <button (click)="toggle()">Toggle</button>
 <button (click)="editRoom()">Edit Room</button>
 <button (click)="deleteRoom()">Delete Room</button>
-
+<!-- 
+{{priceFilter  | json}}
+<div>
+    <input type="number" class="form-control" placeholder="Price" [formControl]="priceFilter">
+</div> -->
 
 <!-- <h1> -->
     <!-- {{getError$ | async}} -->
